--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
     "name": "String Gen Bot",
     "description": "A Telegram Bot to generate Telethon and Pyrogram String Session.",
-    "logo": "https://telegra.ph//file/56d8413e1ad00f08ab0fe.jpg
-",
+    "logo": "https://telegra.ph//file/56d8413e1ad00f08ab0fe.jpg",
     "keywords": [
         "python3",
         "telegram",
